--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <img src="dddd.jpg" />
                     <p class="desc ">Well I am Saksham Sahani, the founder of this project. I decided this layout and thought of better ways to express our idea in most effective manner... So far i have got this and surely have some plans ahead. </p>
                     <h2>Saksham Sahani</h2>
-                    <p>Co-Ideator</p>
+                    <p>Founder</p>
                 </div>
             </div>
         </div>
